fix: image response overflow

--- a/app/src/features/apiClient/screens/apiClient/components/views/components/response/ResponseBody/responseBody.scss
+++ b/app/src/features/apiClient/screens/apiClient/components/views/components/response/ResponseBody/responseBody.scss
@@ -12,6 +12,12 @@
       pointer-events: none;
     }
 
+    .image-response-preview {
+      max-width: 100%;
+      max-height: 100%;
+      object-fit: contain;
+    }
+
     .react-resizable {
       height: calc(100% - 46px) !important;
       min-height: 20px !important;
